<resources>
    <string name="app_name">Food Quiz</string>
    <string name="mozzarella">Mozzarella</string>
    <string name="cheddar">Cheddar</string>
    <string name="swiss">Swiss</string>
    <string name="water">Water</string>
    <string name="wine">Wine</string>
    <string name="submit">submit</string>
    <string name="picnic">Picnic</string>
    <string name="corona">Corona</string>
    <string name="paprika">Paprika</string>
    <string name="water_chemical_notation">H2O</string>
    <string name="question1">1. What is called a meal in open air?</string>
    <string name="question2">2. Which cheese is traditionally used for pizzas?</string>
    <string name="question3">3. What is bottled a lot in the French town Vichy?</string>
    <string name="question4">4. What is the most famous Mexican beer?</string>
    <string name="question5">5. What is the Hungarian word for pepper?</string>
</resources>
