<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.puiyeetong.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/QuestionTextSyle"
            android:text="@string/question1" />

        <EditText
            android:id="@+id/question1_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <TextView
            style="@style/QuestionTextSyle"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/question2_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/mozzarella" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/cheddar" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swiss" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextSyle"
            android:text="@string/question3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/water_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="false"
                android:text="@string/water"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/water_chemical_notation_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="false"
                android:text="@string/water_chemical_notation"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/wine_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/wine"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            style="@style/QuestionTextSyle"
            android:text="@string/question4" />

        <EditText
            android:id="@+id/question4_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <TextView
            style="@style/QuestionTextSyle"
            android:text="@string/question5" />

        <EditText
            android:id="@+id/question5_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:onClick="submitAnswers"
            android:text="@string/submit"
            android:textAllCaps="true" />
    </LinearLayout>

</ScrollView>


